process

Fix comment in syncengine.conf.xml, default is INTERNAL_GTK


22/10/2008 - 104500 Mark Ellis
------------------------------

Fixes to authorization framework, we were trying to connect while
authorization was pending.

25/10/2008 - 195000 Dr J A Gow
------------------------------

Fixed handling of birthdays in contacts for OS0.2x. Birthdays will now sync in
both directions (bug in XSLT transforms: 'Content' elements missing)

Also fixed anniversaries Opensync->Airsync. However anniversaries
Airsync->Opensymc still do not work. The XML is correct and a bug in Opensync
is suspected.

29/10/2008 - 165500 Mark Ellis
------------------------------
Minor update for change in pyrapi2.RAPIError

18/12/2008 - 172600 Mark Ellis
------------------------------
Make -c command line option work more as expected, not silently adding .synce.
Report useful errors from problems with config files.

10/01/2009 - 192200 Mark Ellis
------------------------------
0.13 release


06/02/2009 - 162700 Mark Ellis
------------------------------
Add namespace identifier to Sensitivity in event-from-airsync.xsl, this item
was being ignored.

20/03/2009 - 162700 Mark Ellis
------------------------------
Changed longname of plugin to clarify this is for Windows Mobile 5 and later.

26/03/2009 - 191400 Mark Ellis
------------------------------
Pass None as device name argument to new RAPISession constructor.

03/04/2009 - 123400 Mark Ellis
------------------------------
For device connected through hal, use iface_address property to create RRASession
only listening on our interface.

09/04/2009 - 202900 John Carr
------------------------------
Commit patch from Pawel Kot (via AdamW). Fixes some issues when syncing from WM to
places other than Evolution (e.g. nokia <-> wm). This has been in Mandriva for a while
without problems.

10/04/2009 - 150600 Mark Ellis
------------------------------
Get interface ip for RRASession from RAPISession.
